apps/sample-app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  to:
    kind: Service
    name: sample-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
